--- a/src/main/resources/an/dpr/manteniket/template/BootstrapFooterPanel.html
+++ b/src/main/resources/an/dpr/manteniket/template/BootstrapFooterPanel.html
@@ -1,35 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright 2013 David Beer.
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-<!DOCTYPE html>
-<html xmlns:wicket>
+<html xmlns:wicket="http://wicket.apache.org">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>FooterPanel</title>
+<meta charset="utf-8" />
+<title>Manteniket</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<wicket:panel>
-	<footer class="clearfix footer" role="contentinfo">
-	    <div id="ft"><!-- footer section -->
-	        <div class="footerContainer row">
-	            <p>Copyright &COPY; 2013. David Beer</p>
-	            <p>Wicket Version <wicket:container wicket:id="wicket-version">6.11.0</wicket:container></p>
-	        </div>
-	    </div>
-	</footer> 
-</wicket:panel>
+	<wicket:panel>
+		<footer class="clearfix footer" role="contentinfo">
+			<div class="footerContainer">
+				<!-- footer section -->
+				<div class="row">
+  					<div class="col-xs-6 col-md-4">
+  					</div>
+  					<div class="col-xs-12 col-md-8">
+						<p>Build with Wicket Version <wicket:container wicket:id="wicket-version">6.11.0</wicket:container></p>
+						<p class=" font-size-small">Manteniket <wicket:container wicket:id="manteniket-version"></wicket:container></p>
+  					</div>
+				</div>
+			</div>
+		</footer>
+	</wicket:panel>
 </body>
 </html>
