bugfixed date format datepicker bootstrap

--- a/src/main/resources/an/dpr/manteniket/template/BootstrapFooterPanel.html
+++ b/src/main/resources/an/dpr/manteniket/template/BootstrapFooterPanel.html
@@ -6,19 +6,16 @@
 </head>
 <body>
 	<wicket:panel>
-		<footer class="clearfix footer" role="contentinfo">
-			<div class="footerContainer">
-				<!-- footer section -->
-				<div class="row">
-  					<div class="col-xs-6 col-md-4">
+		<div id="footer">
+			<div class="container">
+  					<div class="col-xs-6 col-md-4 col-lg-4">
   					</div>
-  					<div class="col-xs-12 col-md-8">
+  					<div class="col-xs-12 col-md-8 col-lg-6">
 						<p>Build with Wicket Version <wicket:container wicket:id="wicket-version">6.11.0</wicket:container></p>
 						<p class=" font-size-small">Manteniket <wicket:container wicket:id="manteniket-version"></wicket:container></p>
   					</div>
-				</div>
 			</div>
-		</footer>
+		</div>
 	</wicket:panel>
 </body>
 </html>
