solucion de problemas de direccion. logout nuevos campos actividades

--- a/src/main/resources/an/dpr/manteniket/template/BootstrapFooterPanel.html
+++ b/src/main/resources/an/dpr/manteniket/template/BootstrapFooterPanel.html
@@ -7,6 +7,7 @@
 <body>
 	<wicket:panel>
 		<div id="footer">
+			<div class="span12"><hr/></div>
 			<div class="container">
   					<div class="col-xs-6 col-md-4 col-lg-4">
   					</div>
@@ -15,6 +16,7 @@
 						<p class=" font-size-small">Manteniket <wicket:container wicket:id="manteniket-version"></wicket:container></p>
   					</div>
 			</div>
+			<div class="span12"><hr/></div>
 		</div>
 	</wicket:panel>
 </body>
